@@ -654,6 +654,7 @@ setup/mta_exim.pl
 setup/mta_postfix.pl
 setup/mta_qmail.pl
 setup/mta_sendmail.pl
+setup/newdomain.pl
 setup/query_util.pl
 setup/setup_func.pl
 t/README
